--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                 <div id="bg" class="innovate">
                     <div class="innovate__container container">
                         <div class="innovate__inner">
-                            <h2 class="innovate__title">
+                            <h2 class="innovate__title anim__items">
                                 <p>We were</p>
                                 <p>born</p>
-                                <p>Innovative</p>
+                                <p>innovative</p>
                             </h2>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
             <div class="featured">
                 <div class="featured__container container">
                     <div class="featured__inner">
-                        <h3 class="featured__title">
+                        <h3 class="featured__title anim__items">
                             <p>ELBURZ</p>
                             <p>We will respond to 
                                 you within 24 hours</p>
@@ -161,7 +161,7 @@
                                     <p>We combine technologies & Human Resources</p> 
                                 </h2>
                                 <div class="achievements__info--blocks">
-                                    <h3 class="achievements__info--block achievements__info--block--main">
+                                    <h3 class="achievements__info--block achievements__info--block--main anim__items">
                                         <p>ELBURZ</p>
 
                                         <span class="top"></span>
@@ -169,10 +169,11 @@
                                         <span class="bottom"></span>
                                         <span class="left"></span>
                                     </h3>
-                                    <h3 class="achievements__info--block achievements__info--block--minor">
+                                    <h3 class="achievements__info--block achievements__info--block--minor anim__items">
                                         <p>Awards</p>
                                         <div class="achievements__info--block--minor-text">
-                                            <span>25+</span>
+                                            <span id = "end-number" hidden>25</span>
+                                            <p><span id = "number"></span> +</p>
                                             Satisfied corporate and major individuals in partnership
                                         </div>
                                     </h3>
@@ -226,7 +227,7 @@
                                 Our founder & members of the board
                             </h3>
                             <div class="inquire__body">
-                                <h2 class="inquire__body--title">
+                                <h2 class="inquire__body--title anim__items">
                                     <p>INQUIRE</p>
                                     <p>We will respond to 
                                     you within 24 hours</p>
@@ -254,7 +255,7 @@
                 <div class="career">
                     <div class="career__container container">
                         <div class="career__inner">
-                            <div class="career__title">
+                            <div class="career__title anim__items">
                                 <p>Career</p>
                                 <p>Do you want to 
                                     join ELBURZ?</p>
@@ -290,7 +291,7 @@
                     <div class="blog__container container">
                         <div class="blog__inner">
                             <div class="blog__title">
-                                <div class="blog__title--block">
+                                <div class="blog__title--block anim__items">
                                     <p>Blog</p>
                                     <p>Last updates 
                                     & news</p>
@@ -384,7 +385,7 @@
                         </div>
                     </div>
 
-                    <div class="footer__links">
+                    <div class="footer__links anim__items">
                         <div class="footer__links--items">
                             <a href="#" target="_blank" class="footer__links--item">
                                 <div class="footer__links--item--img">
