--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
                     <div class="footer__links anim__items">
                         <div class="footer__links--items">
-                            <a href="#" target="_blank" class="footer__links--item">
+                            <a href="#" target="_blank" class="footer__links--item footer__links--item--instagram">
                                 <div class="footer__links--item--img">
                                     <svg width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M26.3037 4.66256C26.6361 5.51719 26.8681 6.50348 26.9314 7.9381C26.9946 9.37807 27 9.83691 27 13.5027C27 17.1684 26.9841 17.6273 26.9209 19.0673C26.8576 20.5019 26.6254 21.483 26.2932 22.3428C25.5915 24.1571 24.1566 25.5918 22.3417 26.2933C21.4871 26.6256 20.5006 26.8576 19.0657 26.9209C17.6255 26.9843 17.1666 27 13.5001 27C9.83364 27 9.37451 26.9843 7.93446 26.9209C6.49936 26.8576 5.51825 26.6256 4.6583 26.2933C3.76147 25.9558 2.94376 25.423 2.26846 24.7373C1.58265 24.0622 1.04995 23.25 0.707039 22.3428C0.374642 21.4882 0.142397 20.5019 0.0791324 19.0673C0.0158677 17.6273 0 17.1684 0 13.5027C0 9.83691 0.0158677 9.37807 0.0844902 7.93274C0.147755 6.49812 0.379794 5.51719 0.712191 4.65741C1.04995 3.76075 1.58265 2.9432 2.26846 2.26803C2.94376 1.57699 3.75611 1.04954 4.66366 0.706698C5.51824 0.374571 6.50472 0.14237 7.93961 0.0791173C9.37986 0.0158646 9.83879 0 13.5053 0C17.1717 0 17.6306 0.0158646 19.0763 0.0844741C20.5111 0.147727 21.4925 0.379722 22.3522 0.712055C23.249 1.04954 24.0667 1.58235 24.742 2.26803C25.4332 2.9432 25.9608 3.75539 26.3037 4.66256ZM24.0352 21.4671C24.2199 20.9924 24.4414 20.2804 24.4995 18.9618C24.5628 17.5377 24.5786 17.1157 24.5786 13.5132C24.5786 9.91067 24.5628 9.48356 24.4995 8.05945C24.4414 6.74598 24.2199 6.02878 24.0352 5.55407C23.8188 4.96852 23.4759 4.44107 23.0275 4.00325C22.595 3.55492 22.0621 3.21208 21.4766 2.99595C21.0018 2.81134 20.2896 2.58985 18.9707 2.53175C17.5515 2.4685 17.1243 2.45264 13.5158 2.45264C9.91277 2.45264 9.48537 2.4685 8.06099 2.53175C6.74748 2.58985 6.02993 2.81134 5.55513 2.99595C4.96947 3.21208 4.44192 3.55492 4.00422 4.00325C3.55045 4.43592 3.20754 4.96852 2.99116 5.55407C2.80652 6.02878 2.58499 6.74083 2.52708 8.05945C2.46361 9.47821 2.44795 9.91067 2.44795 13.5132C2.44795 17.1157 2.46361 17.543 2.52708 18.9671C2.58499 20.2804 2.80652 20.9978 2.99116 21.4725C3.20754 22.0578 3.55045 22.5853 3.99886 23.0231C4.43141 23.4715 4.96432 23.8143 5.54977 24.0306C6.02457 24.2152 6.73676 24.4367 8.05563 24.4946C9.47486 24.5581 9.90741 24.5737 13.5106 24.5737C17.1138 24.5737 17.541 24.5581 18.9654 24.4946C20.2791 24.4367 20.9965 24.2152 21.4712 24.0306C22.6477 23.5769 23.5814 22.6434 24.0352 21.4671Z" fill="#CCCCCC"/>
@@ -396,21 +396,21 @@
                                     </svg>
                                 </div>
                             </a>
-                            <a href="#" target="_blank" class="footer__links--item">
+                            <a href="#" target="_blank" class="footer__links--item footer__links--item--facebook">
                                 <div class="footer__links--item--img">
                                     <svg width="13" height="24" viewBox="0 0 13 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M9.99701 3.985H12.188V0.169C11.81 0.117 10.51 0 8.99601 0C5.83701 0 3.67301 1.987 3.67301 5.639V9H0.187012V13.266H3.67301V24H7.94701V13.267H11.292L11.823 9.001H7.94601V6.062C7.94701 4.829 8.27901 3.985 9.99701 3.985Z" fill="#CCCCCC"/>
                                     </svg>
                                 </div>
                             </a>
-                            <a href="#" target="_blank" class="footer__links--item footer__links--item--transform">
+                            <a href="#" target="_blank" class="footer__links--item footer__links--item--transform footer__links--item--telegram">
                                 <div class="footer__links--item--img">
                                     <svg width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M9.41706 13.1809L9.02006 18.7649C9.58806 18.7649 9.83406 18.5209 10.1291 18.2279L12.7921 15.6829L18.3101 19.7239C19.3221 20.2879 20.0351 19.9909 20.3081 18.7929L23.9301 1.82092L23.9311 1.81992C24.2521 0.323917 23.3901 -0.261083 22.4041 0.105917L1.11406 8.25692C-0.338944 8.82092 -0.316944 9.63092 0.867056 9.99792L6.31006 11.6909L18.9531 3.77992C19.5481 3.38592 20.0891 3.60392 19.6441 3.99792L9.41706 13.1809Z" fill="#CCCCCC"/>
                                     </svg>
                                 </div>
                             </a>
-                            <a href="#" target="_blank" class="footer__links--item">
+                            <a href="#" target="_blank" class="footer__links--item footer__links--item--facebook2">
                                 <div class="footer__links--item--img">
                                     <svg width="13" height="24" viewBox="0 0 13 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M9.99701 3.985H12.188V0.169C11.81 0.117 10.51 0 8.99601 0C5.83701 0 3.67301 1.987 3.67301 5.639V9H0.187012V13.266H3.67301V24H7.94701V13.267H11.292L11.823 9.001H7.94601V6.062C7.94701 4.829 8.27901 3.985 9.99701 3.985Z" fill="#CCCCCC"/>
