--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/css/style.css">
+    <link rel="stylesheet" href="styles/css/swiper-bundle.css">
     <title>Document</title>
 </head>
 <body>
@@ -107,9 +108,7 @@
                 <div class="featured__container container">
                     <div class="featured__inner">
                         <h3 class="featured__title anim__items">
-                            <p>ELBURZ</p>
-                            <p>We will respond to 
-                                you within 24 hours</p>
+                            <p>Featured</p>
 
                             <span class="top"></span>
                             <span class="right"></span>
@@ -140,9 +139,36 @@
                                 <div class="img__background--clone"></div>
                             </div>
                         </div>
+
+                        <div class="featured__body--mobile">
+                            <div class="featured__body--mobile--item">
+                                <div class="featured__body--mobile--item-text">
+                                    Automatic trading in futures and spot trading service
+                                </div>
+                                <div class="featured__body--mobile--item-img">
+                                    <img src="img/featured/item_img.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="featured__body--mobile--item">
+                                <div class="featured__body--mobile--item-text">
+                                    Arbitration trading service with all steps included
+                                </div>
+                                <div class="featured__body--mobile--item-img">
+                                    <img src="img/featured/item_img-2.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="featured__body--mobile--item">
+                                <div class="featured__body--mobile--item-text">
+                                    Portfolio preparation, cryptocurrency analysis and it's exchange service
+                                </div>
+                                <div class="featured__body--mobile--item-img">
+                                    <img src="img/featured/item_img-3.svg" alt="">
+                                </div>
+                            </div>  
                         </div>
                     </div>
                 </div>
+            </div>
 
                 <div class="achievements">
                     <div class="achievements__container container">
@@ -154,7 +180,9 @@
                                 <div class="achievements__info--blocks">
                                     <h3 class="achievements__info--block achievements__info--block--main anim__items">
                                         <p>ELBURZ</p>
-
+                                        <p>An award winning 
+                                            Investors Choice 
+                                            </p>
                                         <span class="top"></span>
                                         <span class="right"></span>
                                         <span class="bottom"></span>
@@ -182,6 +210,28 @@
                                         </div>
                                         <div class="achievements__body--block--item ibg">
                                             <img src="img/achievements/slider-img-1.png" alt="">
+                                        </div>
+                                    </div>
+
+                                    <div class="achievements__body--block--slider-inner achievements__slider">
+                                        <div class="achievements__slider--container swiper-container">
+                                            <div class="achievements__slider--wrapper swiper-wrapper">
+                                                <div class="achievements__slider--slide swiper-slide">
+                                                    <div class="achievements__slider--slide--img">
+                                                        <img src="img/achievements/slider-img-1.png" alt="">
+                                                    </div>
+                                                </div>
+                                                <div class="achievements__slider--slide swiper-slide">
+                                                    <div class="achievements__slider--slide--img">
+                                                        <img src="img/achievements/slider-img-1.png" alt="">
+                                                    </div>
+                                                </div>
+                                                <div class="achievements__slider--slide swiper-slide">
+                                                    <div class="achievements__slider--slide--img">
+                                                        <img src="img/achievements/slider-img-1.png" alt="">
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -419,6 +469,10 @@
         </footer>
     </div>
 
+    
+
+    <script src="js/swiper-bundle.js"></script>
+    <script src="js/swiper.js"></script>
     <script src="js/ScrollTrigger.js"></script>
     <script src="js/gsap.js"></script>
     <script src="js/main.js"></script>
