--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                         <div class="header__burger--menu">
                             <div class="header__burger--menu--inner">
                                 <div class="header__burger--items">
-                                    <a href="#" class="header__burger--item">Service</a>
-                                    <a href="#" class="header__burger--item">Other</a>
+                                    <a href="service.html" class="header__burger--item">Service</a>
+                                    <a href="other.html" class="header__burger--item">Other</a>
                                     <a href="#" class="header__burger--item">Contact</a>
                                     <a href="#" class="header__burger--item">Blog</a>
                                 </div>
@@ -75,7 +75,10 @@
                         <div class="main__logo">
                             <div class="main__logo--body">
                                 <div class="main__logo--body--arrow">
-                                    <img src="img/main/arrow.svg" alt="">
+                                    <svg width="283" height="247" viewBox="0 0 283 247" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path class="path-line" d="M0.800049 241.982C56.5062 241.982 167.253 188.055 273.85 12.7" stroke="#888888" stroke-width="9"/>
+                                        <path class="path-line-arrow" d="M242 23.9669L273.422 13.5791L277.921 45.7608L281.567 1L242 23.9669Z" fill="#888888" stroke="#888888" stroke-width="0.9"/>
+                                        </svg>
                                 </div>
                                 <div class="main__logo--body--mountain">
                                     <img src="img/main/mountain.svg" alt="">
