--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                         </svg>
                                 </div>
                                 <div class="main__logo--body--mountain">
-                                    <img src="img/main/mountain.svg" alt="">
+                                    <img data-src="img/main/mountain.svg" src="" alt="">
                                 </div>                  
                             </div>
                             <h1 class="main__logo--title">ELBURZ</h1>
@@ -477,6 +477,7 @@
     <script src="js/swiper-bundle.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/ScrollTrigger.js"></script>
+    <script src="js/lazyLoading.js"></script>
     <script src="js/gsap.js"></script>
     <script src="js/main.js"></script>
     <script src="js/animBackground.js"></script>
