--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
                                 <div class="achievements__body--block achievements__body--block--size-all">
                                     <div class="achievements__body--block--inner">
                                         <div class="achievements__body--block--item ibg">
-                                            <img src="img/achievements/slider-img-1.png" alt="">
+                                            <img src="img/achievements/slider-img-1.webp" alt="">
                                         </div>
                                         <div class="achievements__body--block--item ibg">
-                                            <img src="img/achievements/slider-img-1.png" alt="">
+                                            <img src="img/achievements/slider-img-1.webp" alt="">
                                         </div>
                                         <div class="achievements__body--block--item ibg">
-                                            <img src="img/achievements/slider-img-1.png" alt="">
+                                            <img src="img/achievements/slider-img-1.webp" alt="">
                                         </div>
                                     </div>
 
@@ -221,17 +221,17 @@
                                             <div class="achievements__slider--wrapper swiper-wrapper">
                                                 <div class="achievements__slider--slide swiper-slide">
                                                     <div class="achievements__slider--slide--img">
-                                                        <img src="img/achievements/slider-img-1.png" alt="">
+                                                        <img src="img/achievements/slider-img-1.webp" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="achievements__slider--slide swiper-slide">
                                                     <div class="achievements__slider--slide--img">
-                                                        <img src="img/achievements/slider-img-1.png" alt="">
+                                                        <img src="img/achievements/slider-img-1.webp" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="achievements__slider--slide swiper-slide">
                                                     <div class="achievements__slider--slide--img">
-                                                        <img src="img/achievements/slider-img-1.png" alt="">
+                                                        <img src="img/achievements/slider-img-1.webp" alt="">
                                                     </div>
                                                 </div>
                                             </div>
@@ -323,7 +323,7 @@
                                     </div>
 
                                     <div class="career__body--img">
-                                        <img src="img/career/logo_img.png" alt="">
+                                        <img src="img/career/logo_img.webp" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -355,7 +355,7 @@
                                 <div class="blog__body--inner">
                                     <div class="blog__body--item">
                                         <div class="blog__body--item--img">
-                                            <img src="img/blog/blog_img-1.png" alt="">
+                                            <img src="img/blog/blog_img-1.webp" alt="">
                                         </div>
                                         <div class="blog__body--item--description">
                                             <p>Bitcoin just jumped above $47,000 and could be on a straight path to $50,000</p>
@@ -368,7 +368,7 @@
 
                                     <div class="blog__body--item">
                                         <div class="blog__body--item--img">
-                                            <img src="img/blog/blog_img-2.png" alt="">
+                                            <img src="img/blog/blog_img-2.webp" alt="">
                                         </div>
                                         <div class="blog__body--item--description">
                                             <p>Bitcoin just jumped above $47,000 and could be on a straight path to $50,000</p>
@@ -381,7 +381,7 @@
 
                                     <div class="blog__body--item">
                                         <div class="blog__body--item--img">
-                                            <img src="img/blog/blog_img-3.png" alt="">
+                                            <img src="img/blog/blog_img-3.webp" alt="">
                                         </div>
                                         <div class="blog__body--item--description">
                                             <p>Bitcoin just jumped above $47,000 and could be on a straight path to $50,000</p>
