--- a/service.html
+++ b/service.html
@@ -99,27 +99,27 @@
                             <div class="service__body--inner">
                                 <div class="service__body--item">
                                     <div class="service__body--item--img ibg">
-                                        <img src="img/service__imgs/item_img.png" alt="">
+                                        <img src="img/service__imgs/item_img.webp" alt="">
                                     </div>
                                 </div>
                                 <div class="service__body--item">
                                     <div class="service__body--item--img ibg">
-                                        <img src="img/service__imgs/item_img-2.png" alt="">
+                                        <img src="img/service__imgs/item_img-2.webp" alt="">
                                     </div>
                                 </div>
                                 <div class="service__body--item">
                                     <div class="service__body--item--img ibg">
-                                        <img src="img/service__imgs/item_img-3.png" alt="">
+                                        <img src="img/service__imgs/item_img-3.webp" alt="">
                                     </div>
                                 </div>
                                 <div class="service__body--item">
                                     <div class="service__body--item--img ibg">
-                                        <img src="img/service__imgs/item_img.png" alt="">
+                                        <img src="img/service__imgs/item_img.webp" alt="">
                                     </div>
                                 </div>
                                 <div class="service__body--item">
                                     <div class="service__body--item--img ibg">
-                                        <img src="img/service__imgs/item_img-2.png" alt="">
+                                        <img src="img/service__imgs/item_img-2.webp" alt="">
                                     </div>
                                     <div class="service__body--item--info">
 
