--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                         </svg>
                                 </div>
                                 <div class="main__logo--body--mountain">
-                                    <img data-src="img/main/mountain.svg" src="" alt="">
+                                    <img src="img/main/mountain.svg" alt="">
                                 </div>                  
                             </div>
                             <h1 class="main__logo--title">ELBURZ</h1>
