--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                         <div class="achievements__info--block--minor-text">
                                             <span id = "end-number" hidden>25</span>
                                             <p><span id = "number"></span> +</p>
-                                            Satisfied corporate and major individuals in partnership
+                                            <p>Satisfied corporate and major individuals in partnership</p>
                                         </div>
                                     </h3>
                                 </div>
@@ -204,6 +204,13 @@
 
                             <div class="achievements__body">
                                 <div class="achievements__body--block achievements__body--block--size-all">
+                                    <div class="achievements__body--block--info">
+                                        <div class="achievements__body--block--info-title">Awards</div>
+                                        <div class="achievements__body--block--info-text">
+                                            <p><span>25+</span></p>
+                                            <p>Satisfied corporate and major individuals in partnership</p>
+                                        </div>
+                                    </div>
                                     <div class="achievements__body--block--inner">
                                         <div class="achievements__body--block--item ibg">
                                             <img src="img/achievements/slider-img-1.webp" alt="">
@@ -236,6 +243,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="achievements__slider--pagination swiper-pagination"></div>
                                     </div>
                                 </div>
                                 <div class="achievements__body--block achievements__body--block--size-left">
