--- a/index.html
+++ b/index.html
@@ -328,6 +328,9 @@
                                             <span></span>
                                             </button>
                                         </div>
+                                        <div class="career__body--info--img">
+                                            <img src="img/career/logo_img.webp" alt="">
+                                        </div>
                                     </div>
 
                                     <div class="career__body--img">
@@ -354,7 +357,7 @@
                                     <span class="left"></span>
                                 </div>
                                 <div class="blog__title--see">
-                                    <p>See all posts</p>
+                                    <p>See all <span>posts</span></p>
                                     <span></span>
                                 </div>
                             </div>
@@ -480,9 +483,9 @@
         </footer>
     </div>
 
-    
-    <script src="js/ScrollTrigger.js"></script>
+
     <script src="js/gsap.js"></script>
+    <script src="js/ScrollTrigger.js"></script>
     <script src="js/main.js"></script>
     <script src="js/animBackground.js"></script>
     <script src="js/ibg.js"></script>
