--- a/service.html
+++ b/service.html
@@ -68,10 +68,9 @@
                     <div class="service__inner">
                         <div class="service__title">
                             <div class="service__title--block anim__items">
-                                <p>ELBURZ</p>
-                                <p>An award winning 
-                                 Investors Choice 
-                                </p>
+                                <p>Service</p>
+                                <p>Our clients really 
+                                 value our solutions                                  </p>
 
                                 <span class="top"></span>
                                 <span class="right"></span>
