--- a/service.html
+++ b/service.html
@@ -82,13 +82,13 @@
                                 <div class="service__title--text">We combine technologies & Human Resources </div>
                                 <ul class="service__title--cats">
                                     <li class="service__title--cats--item service__title--cats--item-first">
-                                        <button>Auto Trading</button>
+                                        <button class="service__cat--btn" data-cat="">Auto Trading</button>
                                     </li>
                                     <li class="service__title--cats--item service__title--cats--item-second">
-                                        <button>Arbitration</button>
+                                        <button class="service__cat--btn" data-cat="">Arbitration</button>
                                     </li>
                                     <li class="service__title--cats--item service__title--cats--item-third">
-                                        <button>Management</button>
+                                        <button class="service__cat--btn" data-cat="">Management</button>
                                     </li>
                                 </ul>
                             </div>
@@ -97,26 +97,31 @@
                         <div class="service__body">
                             <div class="service__body--inner">
                                 <div class="service__body--item">
+                                    <div class="service__body--item--cat" hidden>Auto Trading</div>
                                     <div class="service__body--item--img ibg">
                                         <img src="img/service__imgs/item_img.webp" alt="">
                                     </div>
                                 </div>
                                 <div class="service__body--item">
+                                    <div class="service__body--item--cat" hidden>Arbitration</div>
                                     <div class="service__body--item--img ibg">
                                         <img src="img/service__imgs/item_img-2.webp" alt="">
                                     </div>
                                 </div>
                                 <div class="service__body--item">
+                                    <div class="service__body--item--cat" hidden>Management</div>
                                     <div class="service__body--item--img ibg">
                                         <img src="img/service__imgs/item_img-3.webp" alt="">
                                     </div>
                                 </div>
                                 <div class="service__body--item">
+                                    <div class="service__body--item--cat" hidden>Arbitration</div>
                                     <div class="service__body--item--img ibg">
                                         <img src="img/service__imgs/item_img.webp" alt="">
                                     </div>
                                 </div>
                                 <div class="service__body--item">
+                                    <div class="service__body--item--cat" hidden>Management</div>
                                     <div class="service__body--item--img ibg">
                                         <img src="img/service__imgs/item_img-2.webp" alt="">
                                     </div>
